# Python_FinalProject

./: Readme.rst  final_project.ipynb  profile.prof  profile_run_analysis.py  pyproject.toml  run_analysis.py  test_data_prep.py  test_statistics_functions.py
data/: .~lock.data_area.xlsx#  .~lock.data_population_woj.xls#  data_population_p.xls  data_population_v.xls
data_analysis_package/: data_prep.py  run_analysis.py  statistics_functions.py
output/: output.txt  output_g.txt  output_p.txt  output_v.txt  statistics_table.csv  statistics_table_p.csv  statistics_table_v.csv
