[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "data_analysis_package"
version = "0.0.1"
description = "A package for data analysis"
authors = [
    { name = "Anna Czartoszewska", email = "a.czartoszewsk@student.uw.edu.pl"}
]

dynamic=["readme"]
dependencies = [
    "pandas >= 1.3.0",
    "lxml",
    "xlrd >= 2.0.1",
    "openpyxl",
    "matplotlib.pyplot",
    "scipy.stats",
    "seaborn"
]


[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.dynamic]
readme = {file = "Readme.rst"}
