[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "data_analysis_package"
version = "0.0.1"
description = "A package for data analysis"
authors = [
    { name = "Anna Czartoszewska", email = "a.czartoszewsk@student.uw.edu.pl"}
]

[project.scripts]
run-analysis = "run_analysis:main"

dynamic=["readme"]
dependencies = [
    "pandas >= 1.3.0",
    "lxml",
    "xlrd >= 2.0.1",
    "openpyxl",
    "matplotlib",
    "scipy",
    "seaborn"
]


[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.dynamic]
readme = {file = "Readme.rst"}
